<resources>
    <string name="app_name" description="Name of the Busara app app used on the Home Screen and other places [No Translation]">Busara app</string>
    <string name="server" description="default server address for Paco[No Translation]">www.pacoapp.com</string>
    <string name="app_package" description="unique Android package name[No Translation]">com.pacoapp.paco</string>
    <string name="contact_email" description="contact email address [No Translation]">paco-users@googlegroups.com</string>
    <string name="about_googlegroups" description="user group email address [No Translation]">paco-users@googlegroups.com</string>
    <string name="usergroup_website" description="Website for user group [No Translation]">https://groups.google.com/group/paco-users</string>
    <string name="about_support">Support:</string>
    <string name="about_weburl" description="Home page url [No Translation]">pacoapp.com</string>
    <string name="about_bob" description="[No Translation]">Bob Evans</string>
    <string name="about_alberto" description="[No Translation]">Alberto Savoia</string>
    <string name="about_arun" description="[No Translation]">Arun Saigal</string>
    <string name="about_cp" description="[No Translation]">CP Lim</string>
    <string name="about_stephen" description="[No Translation]">Stephen Uhler</string>
    <string name="about_tina" description="[No Translation]">Tina Malm</string>
    <string name="about_brian" description="[No Translation]">Brian Ong</string>
    <string name="about_kanwal" description="[No Translation]">Kanwal Safdar</string>
    <string name="about_team" description="Label for list of team members">Team:</string>
    <string name="about_version" description="Detail label for Paco version">Version:</string>
        <string name="welcome_about" description="button label to go to Paco version information">Paco Version</string>
    <string name="eula_title" description="Title in screen showing EULA">End User License Agreement</string>
    <string name="decline" description="Shown to user to decline the EULA">Decline</string>
    <string name="no" description="Dialog Button Label">No</string>
    <string name="yes" description="Dialog Button Label to agree with presented content">Yes</string>
    <string name="ok" description="Dialog Button Label to accept presented content">OK</string>
    <string name="success" description="Confirmation text usually shown in brief messages after user action completes.">Success</string>
    <string-array name="repeat_range" description="List selection choices for number of days between repeating schedules">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string name="days_of_week" description="Label for schedule edit for weekly schedule">Days of Week</string>
    <string-array name="nth_of_month" description="Ordinal numbers for which week of the month in schedule editing">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth</item>
    </string-array>
    <string name="explore_data" description="Label for menu item to see recorded data">Explore Data</string>
    <string name="current_account" description="Label for value of user's currently chosen Google Account">Current Account</string>
    <string name="experiment_refresh" description="Menu item to cause refresh of the definitions of running experiments from the server.">Experiment Refresh</string>
    <string name="checking_server_for_new_and_updated_experiment_definitions" description="Message about current work of app, namely checking for new and updated experiment definitions">Checking Server for New and Updated Experiment Definitions</string>
    <string name="selected_experiment_not_on_phone_refresh" description="Message shown to user trying to join an experiment that is not known to the phone but that might be on the server.">Selected Experiment does not exist on the phone. Refresh Experiments from Server?</string>
    <string name="link_wrong" description="Message shown to user trying to join experiment from a link in another app but it is not a Paco link">Make sure you are using the right link.</string>
    <string name="ongoing_duration" description="Label for a schedule that runs in perpetuity">ongoing</string>
    <string name="day_esm_period" description="List choice for schedule signal period - randomly every day">Day</string>
    <string name="week_esm_period" description="List choice for schedule signal period - randomly every week">Week</string>
    <string name="month_esm_period" description="List choice for schedule signal period - randomly very month">Month</string>
    <string name="daily_schedule_type" description="List choice for schedule that signals - fixed time every day">Daily</string>
    <string name="weekdays_schedule_type" description="List choice for schedule that signals - fixed time on weekdays">Weekdays</string>
    <string name="weekly_schedule_type" description="List choice for schedule that signals - fixed time every week">Weekly</string>
    <string name="monthly_schedule_type" description="List choice for schedule that signals - fixed time every month">Monthly</string>
    <string name="random_sampling_esm_schedule_type" description="List choice for schedule type  - random signaling (ESM=Experiential Sampling Method)">Random sampling (ESM)</string>
    <string name="self_report_only_schedule_type" description="List choice for schedule that does not signal. User initiates response.">Self report only</string>
    <string name="advanced_schedule_type" description="List choice for schedule that signals in custom, advanced ways">Advanced</string>
    <string name="survey_expired" description="Message to user that the signal to which they were responding has expired and there is no work to be done.">This survey request has expired. No need to enter a response</string>
    <string name="gps_message" description="Message to user to enable GPS location, but only when outside.">"Use GPS for improved location (outside only)? "</string>
    <string name="enable_button" description="Dialog Button label to enable GPS">Enable</string>
    <string name="cancel_button" description="Dialog Button label to cancel GPS">Cancel</string>
    <string name="need_location" description="Message to user about need to enable location services">"You must enable some form of Location Service if you want to include location data. "</string>
    <string name="required_answers_missing" description="Message shown to user submitting a form without filling in required fields.">Required Answers Missing</string>
    <string name="must_answer" description="Label for error dialog listing which fields are required">"Must answer: "</string>
    <string name="about_paco_menu_item" description="Menu Item text for About screens">About Paco</string>
    <string name="eula_menu_item" description="Menu Item to see user agreement text">User Agreement</string>
    <string name="debug_menu_item" description="Menu Item to debug app">Debug</string>
    <string name="select_signal_tone" description="Title of dialog box letting user select the Signaling Audio tone for Paco notifications">Select Signal Tone</string>
    <string name="cannot_find_the_experiment_warning" description="Error message shown to users when trying to load a specific experiment">Cannot find the experiment!</string>
    <string name="save_button" description="Label on button shown to user on survey form">Save</string>
    <string name="start_time_title" description="Label for schedule editing field that sets the start of the window for scheduling">Start Time</string>
    <string name="end_time_title" description="Label for schedule editing field that sets the end of the window for scheduling">End Time</string>
    <string name="modify_time_title" description="Dialog Box title for editing a schedule time">Modify Time</string>
    <string name="days_of_week_title" description="Dialog Box title for editing days of the week to schedule">Days of Week</string>
    <string name="start_hour_must_be_before_end_hour_warning" description="Error message when edited start time is after end time">Start hour must be before end hour</string>
    <string name="show_trends_button" description="Button label for chart that turns on a trend line ">"  Show Trends  "</string>
    <string name="make_selections" description="Button label for list questionss that allow multiple selections">Make selections</string>
    <string name="edit_schedule_menu_item" description="Menu Item to edit schedule">Edit Schedule</string>
    <string name="stop_experiment_menu_item"  description="Menu Item to stop an experiment">Stop Experiment</string>
    <string name="explore_data_menu_item"  description="Menu Item to explore data collected for an experiment">Explore data</string>
    <string name="running_experiments_title" description="Nav Drawer label for Running Experiments (Main) Screen">My Current Experiments</string>
    <string name="completed_experiments_title" description="Nav Drawer label for Finished Experiments Screen">Completed Experiments</string>
    <string name="find_public_experiments_title"  description="Nav Drawer label for Experiment Hub Screen (publicly available experiments)">Experiment Hub</string>
    <string name="stop_the_experiment_dialog_title" description="Title of dialog confirming that user wants to stop the experiment">Stop the Experiment?</string>
    <string name="stop_experiment_dialog_body" description="Body of dialog confirming that user wants to stop the experiment">Are you sure you want to stop the experiment?</string>
    <string name="unknown_author_text" description="Default text in experiment definition when author of experiment is unspecified">unknown author</string>
    <string name="retrieving_lat_lon" description="Placeholder label in survey form while retrieving lat/lon coordinates">Retrieving</string>
    <string name="missing_image_warning" description="Error message when the camera app did not produce a file.">Cannot find image file from camera!</string>
    <string name="unknown_location" description="Label used in survey form when a location is unavailable">Unknown</string>
    <string name="experiment_name" description="Default placeholder for Experiment name while loading real data">Experiment Name</string>
    <string name="description" description="Label for field showing experiment's description on Experiment details page.">Description:</string>
    <string name="join_this_experiment" description="Label for button to join experiment in experiment details page">Join this Experiment</string>
    <string name="your_current_experiments" description="Title for list of currently running experiments">My Current Experiments</string>
    <string name="organization" description="Label for field showing the organization that is offering the experiment">Organization:</string>
    <string name="contact_" description="Label for the field showing the contact email address for the experiment">Contact:</string>
    <string name="new_invitation_title">You have new invitations</string>
    <string name="_unverified_label">(unverified)</string>
</resources>