<?xml version="1.0" encoding="utf-8"?>

<!--<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pacoapp.paco.ui.MyExperimentsActivity" >
    -->
     <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center|top"
        android:gravity="center|top"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_gravity="center|top"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical" >

            <TextView
                android:visibility="gone"
                android:id="@+id/ExperimentListTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:background="@drawable/list_header_background"
                android:paddingBottom="4dip"
                android:paddingLeft="8dip"
                android:paddingTop="4dip"
                android:text="@string/your_current_experiments"
                android:textColor="#000000" />

            <ProgressBar
                android:id="@+id/findExperimentsProgressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:indeterminate="true"
                android:visibility="gone" />

            <ListView
                android:visibility="gone"
                android:id="@+id/find_experiments_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center|top" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="32sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/announcementLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_gravity="center|top"
            android:layout_weight="0.49"
            android:background="@color/orange_background"
            android:gravity="center|top"
            android:orientation="vertical"
            android:visibility="gone" >

            <ImageButton
                android:id="@+id/invitationAnnouncementCloseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />

            <TextView
                android:id="@+id/invitationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_invitation_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/invitationExperimentNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/experiment_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/invitationContactTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organization"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff" />
        </LinearLayout>
        
    </LinearLayout>

</FrameLayout>
<!--

    <fragment
        android:id="@+id/navigation_drawer"
        android:name="com.pacoapp.paco.ui.NavigationDrawerFragment"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>-->
